src/style.css
@font-face {
  font-family: "Now";
  font-weight: 400;
  src: url('./fonts/now.regular.otf');
}

@font-face {
  font-family: "Now";
  font-weight: 500;
  src: url('./fonts/now.medium.otf');
}

@font-face {
  font-family: "Now";
  font-weight: 700;
  src: url('./fonts/now.bold.otf');
}

body {
  font-family: "Now";
  padding: 20px 50px 50px;
  font-size: 1em;
}

h1 {
  font-weight: 700;
  font-size: 24px;
  margin-bottom: 20px;
}

.buttonsRow {
  margin: 20px 0;
  display: flex;
  gap: 10px;
}

.actionButton {
  background-color: blueviolet;
  color: rgb(247, 221, 255);
  padding: 10px;
  border-radius: 5px;
  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.1);
  cursor: pointer;
  transition: all 0.3s ease 0s;
  border: none;
  outline: none;
  font-size: 1em;
  line-height: 1em;
  font-family: "Now";
  vertical-align: middle;
}

.actionButton:hover {
  background-color: rgb(150, 73, 223);
  color: #fff;
  box-shadow: 0px 10px 12px rgba(150, 73, 223, 0.4);
  transform: translateY(-5px);
}

.actionButton.disabled {
  background-color: #ccc;
  color: #888;
  pointer-events: none;
  cursor: not-allowed;
  box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.06);
}

.actionButton.disabled:hover {
  background-color: #ccc;
  color: #888;
}

.cardPreview {
  background-size: contain;
  background-repeat: no-repeat;
  background-position: top left;
  position: relative;
}

.previewText {
  visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
  text-transform: uppercase;
  user-select: none;
  cursor: move;
}

.resultSection {
  margin-top: 20px;
  padding-top: 10px;
  border-top: 1px dashed #ccc;
}

